[tool.poetry]
name = "leeky"
version = "0.1.0"
description = "A framework for testing and evaluating large language models"
authors = ["Mustafa Yasir"]
license = "MIT"
readme = "README.md"
packages = [{include = "leeky", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
anthropic = "^0.18.1"
pyyaml = "^6.0.1"
pandas = "^2.2.0"
numpy = "^1.26.0"
aiohttp = "^3.9.0"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
target-version = "py310"
